--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
       <footer class="footer">
       <p>
-        &copy; {{ site.title }} Weblog made with <a href="http://jekyllrb.com/">Jekyll</a> and much ♥, under <a href="{{ site.license.link }}">{{ site.license.label }}</a>.
+        &copy; {{ site.title }} Weblog made with <a href="http://jekyllrb.com/">Jekyll</a>, under <a href="{{ site.license.link }}">{{ site.license.label }}</a>.
       </p>
       </footer>
 
