--- a/public/css/ascatox.css
+++ b/public/css/ascatox.css
@@ -109,9 +109,12 @@ a .pagination-item:hover {
 }
 
 .social-icons {
-	text-align: left;
-	font-size: 1.5rem;
-	margin-left: 70px;
+	text-align: center;
+	font-size: 2rem;
+	margin-top: 0.2rem;
+	margin-bottom: 1rem;
+	margin-left: 0.8rem;
+	letter-spacing: 0.8rem;
 	
 }
 
